[package]
name = "morsadio"
version = "1.0.0"
authors = ["Acwalynse"]
edition = "2024"
license = "Apache-2.0"
publish = false # package is not meant to be published as a crate ._.

[dependencies]
actually_beep = "0.1.1"
clap = { version = "4.5.48", features = ["derive"] }

[profile.release]
opt-level = 2
